--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:unit": "vitest",
     "test:e2e": "playwright test",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build",
+    "type-check": "bunx --bun vue-tsc --build",
     "types": "bunx --bun vue-tsc -p tsconfig.build.json",
     "lint": "eslint . --fix"
   },
